[package]
name = "sidetree"
version = "0.10.0"
authors = ["Tobias Pisani <topisani@hamsterpoison.com>"]
edition = "2018"
description = "TUI file tree for usage with terminal text editors"
license = "MIT"
homepage = "https://github.com/topisani/sidetree"

[dependencies]
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"]}
crossterm = { version = "0.27", features = ["events"] }
unicode-width = "0.1.11"
serde = { version = "1.0.192", features = ["derive"] }
combine = "4.6.6"
clap = { version = "4.4.8", features = ["derive"] }
xdg = "2.4.1"
path-absolutize = "3.0.14"
lazy_static = "1.4.0"
toml = "0.8.8"
syn = "2.0.39"
quote = "1.0.33"
proc-macro2 = "1.0.69"
tui-textarea = { version = "0.3.1", default-features = false, features = ["crossterm"] }

# https://stackoverflow.com/questions/65813638/how-to-use-proc-macro-in-normal-module
[lib]
name = "config_macros"
path = "src/config_macros.rs"
proc-macro = true

[[bin]]
name = "sidetree"
path = "src/main.rs"
